--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,10 @@ services:
       - "--log.level=INFO"
       - "--providers.docker.exposedbydefault=false"
       - "--providers.docker=true"
+
+  artists:
+    image: "node:16.7-alpine"
+    volumes:
+      - "./services/artists:/app"
+    user: "${UID:-1000}:${GID:-1000}"
+    working_dir: "/app"
