--- a/services/artists/package.json
+++ b/services/artists/package.json
@@ -4,5 +4,10 @@
   "description": "Artists",
   "main": "index.js",
   "author": "Wanderson Camargo <wandersonwhcr@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "fastify": "^3.20.2",
+    "fastify-mongodb": "^4.1.0",
+    "mongodb": "^4.1.1"
+  }
 }
