--- a/services/artists/package.json
+++ b/services/artists/package.json
@@ -9,5 +9,8 @@
     "fastify": "^3.20.2",
     "fastify-mongodb": "^4.1.0",
     "mongodb": "^4.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
