--- a/services/artists/package.json
+++ b/services/artists/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "fastify": "^3.20.2",
     "fastify-mongodb": "^4.1.0",
-    "mongodb": "^4.1.1"
+    "mongodb": "^4.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
